--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.slideContent{
+  /* background-color: red; */
+  border: 2px solid red;
+  height: 60vh;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
