--- a/frontend/src/components/main/home.css
+++ b/frontend/src/components/main/home.css
@@ -8,7 +8,7 @@
   }
   
   body {
-    background: white;
+    /* background: green; */
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #000;
